# texas-holdem-aipro

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: cpp-llm-learning-guide.md  phase-verifier.md
.claude/commands/: phase-verify.md
.claude/hooks/: doc-sync-check.sh
.claude/skills/: diagnose-first.md
.superpowers/brainstorm/23388-1775186298/content/: anim-scope.html  anim-style.html  architecture.html
.superpowers/brainstorm/23388-1775186298/state/: server-stopped
cmake/: Dependencies.cmake
config/: game.yaml  rules.md
config/backends/: llamacpp.yaml  ollama.yaml  openai.yaml
config/personalities/: aggressive.md  cautious.md  default.md
docs/: README.md  renderer-issues.md  resume-project-software-ml.md
docs/guides/: cmake-intro.md  interfaces.md  mutex-and-lifetimes.md  openai-api.md  pointers.md
docs/plan/: implementation.md  phase-1-cmake-scaffold.md  phase-10-online-multiplayer.md  phase-11-llm-integration.md  phase-2-core-types-card-deck-hand.md  phase-3-gamestate-gameengine.md  phase-4-core-tests.md  phase-5-ai-layer.md  phase-6-players-layer.md  phase-7-ui-layer.md  phase-8-wire-up.md  phase-9-polish.md
docs/rules/: texas-holdem.md
docs/spec/: design.md
docs/superpowers/plans/: 2026-04-02-diagnose-first.md
docs/superpowers/specs/: 2026-03-22-texas-holdem-aipro-design.md  2026-04-02-animations-design.md  2026-04-02-diagnose-first-design.md
logs/: .gitkeep
scripts/: coverage.sh
src/: CMakeLists.txt  main.cpp
src/ai/: CMakeLists.txt  ILLMClient.hpp  OllamaClient.cpp  OllamaClient.hpp  OpenAICompatibleClient.cpp  OpenAICompatibleClient.hpp  PromptBuilder.cpp  PromptBuilder.hpp
src/players/: AIPlayer.cpp  AIPlayer.hpp  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.hpp  IPlayer.hpp
src/ui/: AnimationManager.cpp  AnimationManager.hpp  CMakeLists.txt  DebugPanel.cpp  DebugPanel.hpp  GameRenderer.cpp  GameRenderer.hpp  InputHandler.cpp  InputHandler.hpp  LLMDebugLog.hpp  LetterboxView.hpp  SetupScreen.cpp  SetupScreen.hpp  SoundManager.cpp  SoundManager.hpp
tests/: CMakeLists.txt
tests/ai/: CMakeLists.txt  MockLLMClient.hpp  test_prompt_builder.cpp
tests/players/: CMakeLists.txt  MockLLMClient.hpp  test_ai_player.cpp
